tests/NormalTests/paczka1/small_fuzzy/66242186.err
Error in line 8: jT5pD S803 
Error in line 9: 2,2
Error in line 10: jT5pD S803 73,8
